# SkelViewer

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Main.qml  main.cpp  qtquickcontrols2.conf  resources.qrc  vcpkg.json
shaders/: checker.frag  shaders.qrc
skel_lib/: ArrayMeta.h  DataLoaderBinary.cpp  DataLoaderBinary.h  JointProvider3D.cpp  JointProvider3D.h  MotionData.cpp  MotionData.h  MotionTypes.h  PlaybackHub.cpp  PlaybackHub.h  QtOpaqueTypes.h  SingleViewerConfiguration.h  SkeletonInstance.cpp  SkeletonInstance.h  SkeletonManager.cpp  SkeletonManager.h  SkeletonMeshGeometry.cpp  SkeletonMeshGeometry.h  SkeletonPlayback.cpp  SkeletonPlayback.h  SkeletonViewModel.cpp  SkeletonViewModel.h  UtilityProvider.h  utilityprovider.cpp
tmp/: coleman_01_ti0.meta.json  oregon_test_1_ti0.meta.json  wu_squat_185_ti0.meta.json
ui_modules/: BasePlane.qml  CameraControls.qml  CameraSlider.qml  CustomTheme.qml  FrameSlider.qml  GroundPlane.qml  HUD.qml  MenuBar.qml  MenuButton.qml  MotionScatter.qml  PlaybackHub.qml  RootImprint.qml  SceneView.qml  SectionBox.qml  SideControl.qml  SkeletonModel.qml  TopMenuBar.qml  utility.js
